--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "expo": "~53.0.15",
     "expo-av": "^15.1.7",
     "expo-camera": "^16.1.10",
+    "expo-file-system": "^18.1.1",
     "expo-font": "^13.3.2",
     "expo-location": "^18.1.6",
+    "expo-speech": "^13.1.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
