Refactor AI initialization in App.tsx to use lazy loading for improved startup performance. Enhance error handling for AI model loading and processing, including specific alerts for memory and storage issues. Update README.md with Android setup instructions for GGUF model inference and performance optimization details. Modify package.json and package-lock.json to include new dependencies for improved functionality. Update AndroidManifest.xml and build.gradle for large heap support and architecture optimization. Ensure all features maintain offline functionality.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,6 +94,16 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
+        
+        // Enable large heap for AI model processing
+        manifestPlaceholders = [
+            "android:largeHeap": "true"
+        ]
+        
+        // Optimize for arm64-v8a architecture (required for llama.rn)
+        ndk {
+            abiFilters "arm64-v8a"
+        }
     }
     signingConfigs {
         debug {
