--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "expo": "~53.0.15",
     "expo-av": "^15.1.7",
     "expo-camera": "^16.1.10",
+    "expo-device": "^7.1.4",
     "expo-file-system": "^18.1.1",
     "expo-font": "^13.3.2",
     "expo-location": "^18.1.6",
     "expo-speech": "^13.1.0",
     "expo-status-bar": "~2.2.3",
+    "llama.rn": "^0.6.0",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
