--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "expo": "~53.0.15",
+    "@maplibre/maplibre-react-native": "^10.1.6",
+    "expo": "53.0.18",
     "expo-av": "^15.1.7",
     "expo-camera": "^16.1.10",
     "expo-device": "^7.1.4",
@@ -21,8 +22,10 @@
     "expo-status-bar": "~2.2.3",
     "llama.rn": "^0.6.0",
     "react": "19.0.0",
-    "react-native": "0.79.4",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native": "0.79.5",
+    "react-native-vector-icons": "^10.2.0",
+    "expo-dev-client": "~5.2.4",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
