--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@maplibre/maplibre-react-native": "^10.1.6",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "expo": "53.0.18",
     "expo-av": "^15.1.7",
     "expo-camera": "^16.1.10",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "^7.1.4",
     "expo-file-system": "^18.1.1",
     "expo-font": "^13.3.2",
@@ -24,8 +25,7 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-vector-icons": "^10.2.0",
-    "expo-dev-client": "~5.2.4",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
