Refactor App.tsx and MapComponent to remove view mode toggle functionality, simplifying the user interface for the MVP. Update app.json to include project ID in extra configuration and enhance permissions management. Ensure all features remain functional offline.

--- a/app.json
+++ b/app.json
@@ -70,21 +70,17 @@
         "android.permission.READ_EXTERNAL_STORAGE",
         "android.permission.WRITE_EXTERNAL_STORAGE",
         "android.permission.MODIFY_AUDIO_SETTINGS",
-        "android.permission.INTERNET",
-        "android.permission.CAMERA",
-        "android.permission.RECORD_AUDIO",
-        "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_BACKGROUND_LOCATION",
-        "android.permission.READ_EXTERNAL_STORAGE",
-        "android.permission.WRITE_EXTERNAL_STORAGE",
-        "android.permission.MODIFY_AUDIO_SETTINGS",
         "android.permission.INTERNET"
       ],
       "package": "com.anonymous.localtravelbuddy"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "a70ce43f-6793-4c67-aa08-02981e6fe133"
+      }
     }
   }
 }
